--- a/src/oed-testdata.client/src/App.css
+++ b/src/oed-testdata.client/src/App.css
@@ -1,23 +1,24 @@
 ﻿main {
-    margin: 5rem auto;
-    max-width: 1200px;
-    padding: 1rem;
-  }
-  
-  pre {
-    background-color: var(--fds-colors-grey-100);
-    padding: 2rem;
-    border-radius: 0.25rem;
-    overflow-x: auto;
-  }
-  
-  .container__flex {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-    gap: 2rem;
-  }
-  
-  .xml-container {
-    margin-top: 5rem;
-  }
-  
+  margin: 5rem auto;
+  max-width: 1200px;
+  padding: 1rem;
+}
+
+pre {
+  background-color: var(--fds-colors-grey-100);
+  padding: 2rem;
+  border-radius: 0.25rem;
+  overflow-x: auto;
+}
+
+.container__grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  gap: 2rem;
+}
+
+.flex-center {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
