--- a/src/oed-testdata.client/src/App.css
+++ b/src/oed-testdata.client/src/App.css
@@ -12,6 +12,7 @@ pre {
 }
 
 .container__grid {
+  margin-top: 5rem;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   gap: 2rem;
