Refactor login page

--- a/src/oed-testdata.client/src/index.css
+++ b/src/oed-testdata.client/src/index.css
@@ -15,3 +15,8 @@ ul {
 .numeric {
   font-variant-numeric: tabular-nums;
 }
+
+/* use view transitions by default */
+@view-transition {
+  navigation: auto;
+}
