--- a/src/oed-testdata.client/src/components/login/style.css
+++ b/src/oed-testdata.client/src/components/login/style.css
@@ -1,26 +1,17 @@
 #login-dialog {
-  display: flex;
-  flex-direction: column;
-  padding: 1.5rem;
-  border: 1px solid var(--fds-colors-grey-300);
+  max-width: 480px;
+  border: 1px solid var(--fds-semantic-border-neutral-subtle);
   border-radius: 0.25rem;
+  padding: 1.5rem;
 
   form {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    align-items: flex-start;
-
-    label {
-      input {
-        padding: .25rem;
-      }
-    }
-  
-    button {
-      padding: .5rem;
-      flex: 1;
-    }
   }
- 
+
+  button {
+    margin-top: 1.5rem;
+    width: fit-content;
+  }
 }
