--- a/src/oed-testdata.client/src/components/estateCard/style.css
+++ b/src/oed-testdata.client/src/components/estateCard/style.css
@@ -9,11 +9,23 @@
     padding: 1rem 1.5rem;
     background-color: var(--fds-semantic-surface-third-light);
     border-radius: 0.25rem 0.25rem 0 0;
+    
+    ul {
+      display: flex;
+      flex-direction: row;
+      gap: 1rem;
+
+      li>span {
+        font-size: 1rem;
+      }
+    }
+
   }
 
   .card__content {
     padding: 1rem 1.5rem;
     flex-grow: 1;
+
     ul {
       margin-bottom: 1rem;
     }
