--- a/src/oed-testdata.client/src/index.css
+++ b/src/oed-testdata.client/src/index.css
@@ -4,6 +4,7 @@
 body {
   font-family: "Inter", sans-serif;
   font-feature-settings: "cv05" 1; /* Enable lowercase l with tail */
+  background-color: var(--ds-color-neutral-background-tinted);
 }
 
 ul {
