--- a/src/oed-testdata.client/src/App.css
+++ b/src/oed-testdata.client/src/App.css
@@ -1,5 +1,12 @@
-﻿main {
-  margin: 5rem auto;
+﻿/* Designsystemet overrides */
+
+.ds-table {
+  --dsc-table-padding: var(--ds-size-3);
+}
+
+
+main {
+  margin: 2rem auto;
   max-width: 1200px;
   padding: 1rem;
 }
@@ -12,14 +19,27 @@ pre {
 }
 
 .container__grid {
-  margin-top: 5rem;
+  margin-top: var(--ds-size-10);
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-  gap: 2rem;
+  gap: var(--ds-size-8);
 }
 
 .flex-center {
   display: flex;
   align-items: center;
   gap: 1rem;
+}
+
+.flex-between {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: var(--ds-size-2);
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+  gap: var(--ds-size-1);
 }
