--- a/src/oed-testdata.client/src/components/estateCard/style.css
+++ b/src/oed-testdata.client/src/components/estateCard/style.css
@@ -1,60 +1,22 @@
-.card {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  background-color: var(--ds-color-neutral-surface-default);
-
-  .card__heading {
-    padding: 1rem 1.5rem;
-    background-color: var(--ds-color-neutral-surface-tinted);
-    border-radius: 0.25rem 0.25rem 0 0;
-    
-    ul {
-      display: flex;
-      flex-direction: row;
-      gap: 1rem;
-
-      li>span {
-        font-size: 1rem;
-      }
-    }
-  }
-
-  .card__content {
-    padding: 1rem 1.5rem;
-    flex-grow: 1;
-
-    ul {
-      margin-bottom: 1rem;
-    }
-
-    li {
-      display: flex;
-      flex-direction: column;
-      padding: 0.5rem 1rem;
-      background-color: var(--ds-color-neutral-surface-tinted);
-      margin-bottom: 1rem;
-
-      div {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        gap: 1rem;
-      }
-    }
-  }
-
-  .card__footer {
-    display: flex;
-    justify-content: flex-end;
-    gap: 1rem;
-  }
-
-  .card__toast {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    padding: 1rem 1.5rem;
-  }
+.card__toast {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  padding: 1rem 1.5rem;
 }
+
+.card__footer {
+  display: flex;
+  justify-content: flex-end;
+  gap: 1rem;
+}
+
+.tag-list {
+  list-style: none;
+  display: flex;
+  gap: var(--ds-size-3);
+  flex-wrap: wrap;
+  align-items: baseline;
+}
+
+
